terraform/modules/ec2/main.tf
# ec2
resource "aws_instance" "main" {
  count = length(var.server_names)

  ami                         = var.ami_id
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  # key_name                    = var.key_name
  subnet_id                   = module.network.aws_subnet_main_id
  vpc_security_group_ids      = [aws_security_group.web_sg.id]

  tags = {
    Name = var.server_names[count.index]
  }
}
module "network" {
    source = "../network"
  
}
# security group
resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "web_sg"
  vpc_id      = module.network.aws_vpc_main_id 

  ingress {
    description      = "ssh"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "http"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description = "http"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    self        = true
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "monitoring-sg"
  }
}
